@@ -2,8 +2,10 @@ package com.dtstack.engine.flink;
 
 import com.dtstack.engine.base.util.KerberosUtils;
 import com.dtstack.engine.common.exception.RdosDefineException;
-import com.dtstack.engine.flink.enums.Deploy;
+import com.dtstack.engine.flink.enums.ClusterMode;
+import com.dtstack.engine.flink.constrant.ConfigConstrant;
 import com.dtstack.engine.flink.util.HadoopConf;
+import com.sun.istack.NotNull;
 import org.apache.flink.configuration.Configuration;
 import org.apache.flink.configuration.CoreOptions;
 import org.apache.flink.configuration.SecurityOptions;
@@ -29,14 +31,6 @@ public class FlinkClientBuilder {
 
     private static final Logger LOG = LoggerFactory.getLogger(FlinkClientBuilder.class);
 
-    private final static String AKKA_ASK_TIMEOUT = "50 s";
-
-    private final static String AKKA_CLIENT_TIMEOUT = "300 s";
-
-    private final static String AKKA_TCP_TIMEOUT = "60 s";
-
-    private static String jvm_options = "-XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:+CMSIncrementalMode -XX:+CMSIncrementalPacing";
-
     private FlinkConfig flinkConfig;
 
     private org.apache.hadoop.conf.Configuration hadoopConf;
@@ -53,7 +47,7 @@ public class FlinkClientBuilder {
         builder.yarnConf = yarnConf;
 
         KerberosUtils.login(flinkConfig, ()->{
-            if (Deploy.session.name().equalsIgnoreCase(flinkConfig.getClusterMode())) {
+            if (!ClusterMode.STANDALONE.name().equalsIgnoreCase(flinkConfig.getClusterMode())) {
                 try {
                     builder.yarnClient = initYarnClient(yarnConf);
                 } catch (Exception e) {
@@ -70,11 +64,11 @@ public class FlinkClientBuilder {
 
     public void initFlinkGlobalConfiguration(Properties extProp) {
         Configuration config = new Configuration();
-        config.setString("akka.client.timeout", AKKA_CLIENT_TIMEOUT);
-        config.setString("akka.ask.timeout", AKKA_ASK_TIMEOUT);
-        config.setString("akka.tcp.timeout", AKKA_TCP_TIMEOUT);
+        config.setString("akka.client.timeout", ConfigConstrant.AKKA_CLIENT_TIMEOUT);
+        config.setString("akka.ask.timeout", ConfigConstrant.AKKA_ASK_TIMEOUT);
+        config.setString("akka.tcp.timeout", ConfigConstrant.AKKA_TCP_TIMEOUT);
         // JVM Param
-        config.setString(CoreOptions.FLINK_JVM_OPTIONS, jvm_options);
+        config.setString(CoreOptions.FLINK_JVM_OPTIONS, ConfigConstrant.JVM_OPTIONS);
         config.setBytes(HadoopUtils.HADOOP_CONF_BYTES, HadoopUtils.serializeHadoopConf(hadoopConf));
         config.setLong("submitTimeout", 5);
 
@@ -92,15 +86,7 @@ public class FlinkClientBuilder {
             LOG.error("", e);
             throw new RdosDefineException(e.getMessage());
         }
-
         flinkConfiguration = config;
-    }
-
-    public void setSecurityConfig() {
-        String keytabPath = flinkConfig.getPrincipalPath();
-        String principal = flinkConfig.getPrincipalName();
-        flinkConfiguration.setString(SecurityOptions.KERBEROS_LOGIN_KEYTAB, keytabPath);
-        flinkConfiguration.setString(SecurityOptions.KERBEROS_LOGIN_PRINCIPAL, principal);
     }
 
     public static HadoopConf initHadoopConf(FlinkConfig flinkConfig) {
@@ -171,6 +157,7 @@ public class FlinkClientBuilder {
         }
     }
 
+    @NotNull
     public FlinkConfig getFlinkConfig() {
         return flinkConfig;
     }
